--- a/File Uploader/package.json
+++ b/File Uploader/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^5.21.0",
     "@prisma/client": "^5.21.0",
     "@quixo3/prisma-session-store": "^3.1.13",
     "bcryptjs": "^2.4.3",
@@ -25,6 +26,7 @@
     "moment": "^2.30.1",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
-    "passport-session": "^1.0.2"
+    "passport-session": "^1.0.2",
+    "pg": "^8.13.0"
   }
 }
