--- a/File Uploader/package.json
+++ b/File Uploader/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.30.1",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "passport-session": "^1.0.2",
     "pg": "^8.13.0"
   }
