--- a/File Uploader/package.json
+++ b/File Uploader/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.7.5",
+    "base64-arraybuffer": "^1.0.2",
     "prisma": "^5.21.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
@@ -19,11 +20,15 @@
     "@prisma/adapter-pg": "^5.21.0",
     "@prisma/client": "^5.21.0",
     "@quixo3/prisma-session-store": "^3.1.13",
+    "@supabase/supabase-js": "^2.46.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "fs": "^0.0.1-security",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
