--- a/BlogProject/BlogApi/package.json
+++ b/BlogProject/BlogApi/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "@prisma/client": "^6.0.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "moments": "^0.0.2",
     "nodemon": "^3.1.7",
